[package]
name = "pos"
version = "0.1.0"
edition = "2021"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"

[package.metadata.bootimage]

build-command = ["build"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
run-args = []
test-args = []
test-success-exit-code = 0
test-timeout = 300
test-no-reboot = true
