[package]
name = "pos"
version = "0.1.0"
edition = "2021"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# [[test]]
# name = "should_panic"
# harness = false

[features]

[dependencies]
bootloader = "0.9.8"
spin = "0.5.2"
# 0.4.5 Volatile<ScreenChar> trait bounds not satisfied 
volatile = "0.2.6" 
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase-0xf4,iosize=0x04"]
test-success-exit-code = 33
